@@ -1,3 +1,7 @@
+2014-08-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Improved performance of handled items check, resolves #60445 (thanks to Johannes Feustel)
+
 2014-06-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Ensured proper initialization of task list in Scheduler repository, resolves #59381
